--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | My Consulting Firm</title>
+  <title>About Me | My Consulting Firm</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,13 +19,21 @@
     </nav>
   </header>
   <main>
-    <section class="banner">
-      <h1>Welcome to My Consulting Firm</h1>
-      <p>Your expert in software test automation.</p>
+    <section class="about">
+      <h1>About Me</h1>
+      <p>Professional photo and a brief bio.</p>
     </section>
-    <section class="intro">
-      <h2>About Us</h2>
-      <p>Brief introduction about your firm.</p>
+    <section class="experience">
+      <h2>Experience</h2>
+      <p>Summary of your work experience.</p>
+    </section>
+    <section class="skills">
+      <h2>Skills</h2>
+      <p>Key skills relevant to software test automation.</p>
+    </section>
+    <section class="testimonials">
+      <h2>Testimonials</h2>
+      <p>Quotes from clients or colleagues.</p>
     </section>
   </main>
   <footer>
