--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | My Consulting Firm</title>
+  <title>Contact | My Consulting Firm</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,13 +19,22 @@
     </nav>
   </header>
   <main>
-    <section class="banner">
-      <h1>Welcome to My Consulting Firm</h1>
-      <p>Your expert in software test automation.</p>
+    <section class="contact">
+      <h1>Contact</h1>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message"></textarea>
+        <button type="submit">Send</button>
+      </form>
     </section>
-    <section class="intro">
-      <h2>About Us</h2>
-      <p>Brief introduction about your firm.</p>
+    <section class="contact-info">
+      <h2>Contact Information</h2>
+      <p>Email: contact@example.com</p>
+      <p>Phone: 123-456-7890</p>
     </section>
   </main>
   <footer>
