--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | My Consulting Firm</title>
+  <title>Portfolio | My Consulting Firm</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,13 +19,17 @@
     </nav>
   </header>
   <main>
-    <section class="banner">
-      <h1>Welcome to My Consulting Firm</h1>
-      <p>Your expert in software test automation.</p>
-    </section>
-    <section class="intro">
-      <h2>About Us</h2>
-      <p>Brief introduction about your firm.</p>
+    <section class="portfolio">
+      <h1>Portfolio</h1>
+      <p>Showcase of past projects.</p>
+      <div class="project">
+        <h2>Project 1</h2>
+        <p>Description of Project 1.</p>
+      </div>
+      <div class="project">
+        <h2>Project 2</h2>
+        <p>Description of Project 2.</p>
+      </div>
     </section>
   </main>
   <footer>
